chapter-3/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: apache 
spec:
  rules:
  - host: apache.teamk8s.de
    http:
      paths:
      - backend:
          serviceName: apache
          servicePort: 80
        path: /
